src/main/java/com/example/easywheelz/Errors/IncorrectUserCredentialsError.java
package com.example.easywheelz.Errors;

public class IncorrectUserCredentialsError extends RuntimeException {
    public IncorrectUserCredentialsError(String errorMessage) {
        super(errorMessage);
    }
}
